cmake_minimum_required (VERSION 3.5)
project (mymemory-allocators LANGUAGES CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(SOURCES src/main.cpp)

add_executable(main ${SOURCES})
message(3333)
message(${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/includes)
#target_compile_features(main PRIVATE cxx_std_11)